--- a/CSS/Home/aboutMe.css
+++ b/CSS/Home/aboutMe.css
@@ -32,24 +32,24 @@
 .about-me .content .img-container .img {
   width: 100%;
   object-fit: cover;
-  transform: scale(0.7);
-  opacity: 0;
-  transition: all 400ms ease-in-out;
+  opacity: 1;
+  transform: translateX(0);
+  transition: transform 300ms ease-in-out, opacity 300ms ease-in-out;
 }
 
-.about-me.appear .content .img-container .img {
+.about-me .content .img-container .img.appear {
   opacity: 1;
-  transform: scale(1);
+  transform: translateX(0);
 }
 
 /* text */
 .about-me .text {
-  transform: translateY(100px);
-  opacity: 0;
-  transition: all 400ms ease-in-out;
+  transform: translateY(0);
+  opacity: 1;
+  transition: transform 300ms ease-in-out, opacity 300ms ease-in-out;
 }
 
-.about-me.appear .text {
+.about-me .text.appear {
   transform: translateY(0);
   opacity: 1;
 }
