--- a/CSS/Helper/bg-color.css
+++ b/CSS/Helper/bg-color.css
@@ -1,28 +1,28 @@
 /* background colors */
 .bg-color-1 {
-  background-color: var(--color-1) !important;
+  background-color: var(--color-1);
 }
 
 .bg-color-3 {
-  background-color: var(--color-3) !important;
+  background-color: var(--color-3);
 }
 
 .bg-color-4 {
-  background-color: var(--color-4) !important;
+  background-color: var(--color-4);
 }
 
 .bg-color-5 {
-  background-color: var(--color-5) !important;
+  background-color: var(--color-5);
 }
 
 .bg-color-6 {
-  background-color: var(--color-6) !important;
+  background-color: var(--color-6);
 }
 
 .bg-color-7 {
-  background-color: var(--color-7) !important;
+  background-color: var(--color-7);
 }
 
 .bg-color-9 {
-  background-color: var(--color-9) !important;
+  background-color: var(--color-9);
 }
