--- a/CSS/Home/dietChart.css
+++ b/CSS/Home/dietChart.css
@@ -1,11 +1,15 @@
 .diet-chart {
   position: relative;
-  background: url("../../../Assets/waves.png");
-  background-size: 550px;
+  background-color: var(--color-4);
+  background-image: url("/Assets/waves.png");
+  background-size: contain;
   background-position: bottom left;
   background-repeat: repeat-x;
+  height: 800px;
+  padding-top: 50px;
 }
 
+/* img  */
 .diet-chart .img {
   position: absolute;
   height: 300px;
@@ -14,17 +18,10 @@
   object-fit: contain;
   object-position: bottom right;
 }
-.diet-chart .content {
-  padding-top: 48px;
-  padding-bottom: 320px;
-}
 
-.diet-chart .text {
-  max-width: 600px;
-}
-
+/* text  */
 .diet-chart .text h1 {
-  max-width: 400px;
+  max-width: 300px;
   font-style: normal;
   font-weight: bold;
   font-size: 32px;
@@ -34,78 +31,95 @@
 }
 
 .diet-chart .text p {
+  max-width: 290px;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   letter-spacing: -0.01em;
-  color: var(--color-1);
+  color: var(--color-6);
   margin-bottom: 32px;
 }
 
 .diet-chart .text button {
-  padding: 4px 12px !important;
-  font-size: 13px !important;
+  padding: 4px 13px;
+  font-size: 13px;
 }
 
-@media screen and (min-width: 390px) {
+/* animation */
+.diet-chart .text {
+  opacity: 0;
+  transform: translateX(-100px);
+  transition-property: opacity, transform;
+  transition-timing-function: ease;
+  transition-duration: 600ms;
+}
+
+.diet-chart.ani .text {
+  opacity: 1;
+  transform: translateX(0);
+}
+@media screen and (min-width: 380px) {
+  .diet-chart {
+    padding-left: 3%;
+  }
+}
+
+@media screen and (min-width: 400px) {
   .diet-chart .text button {
-    padding: 8px 16px !important;
-    font-size: 16px !important;
+    padding: 8px 16px;
+    font-size: 16px;
   }
 }
 
 @media screen and (min-width: 550px) {
   .diet-chart {
-    background-size: contain;
+    height: 840px;
   }
 
   .diet-chart .img {
     height: 350px;
   }
-
-  .diet-chart .text p {
-    max-width: 400px;
-  }
-  .diet-chart .text button {
-    font-size: 16px;
-    padding: 4px 16px;
-  }
 }
 
-@media screen and (min-width: 750px) {
-  .diet-chart .content {
-    padding-bottom: 200px;
+@media screen and (min-width: 710px) {
+  .diet-chart {
+    height: 600px;
+    padding-left: 4%;
+  }
+
+  .diet-chart .img {
+    height: 480px;
   }
 }
 
 @media screen and (min-width: 845px) {
-  .diet-chart .img {
-    height: 480px;
+  .diet-chart {
+    height: 800px;
   }
 
   .diet-chart .text h1 {
+    max-width: 350px;
     font-size: 56px;
   }
 
   .diet-chart .text p {
-    max-width: 500px;
+    max-width: 490px;
     font-size: 20px;
-    color: var(--color-5);
   }
 }
 
 @media screen and (min-width: 1050px) {
   .diet-chart {
-    background-size: 1000px;
-  }
-}
-
-@media screen and (min-width: 1000px) {
-  .diet-chart .content {
-    padding: 184px 0;
+    padding-top: 100px;
   }
 
   .diet-chart .img {
-    height: calc(100% - 200px);
+    height: 570px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .diet-chart .img {
+    height: 690px;
   }
 }
