--- a/CSS/Home/header.css
+++ b/CSS/Home/header.css
@@ -1,5 +1,6 @@
 .header {
   position: relative;
+  overflow: hidden;
 }
 
 .leaf-1 {
@@ -108,11 +109,7 @@
   }
 }
 
-@media screen and (min-width: 845px) {
-  .nav {
-    background-color: transparent !important;
-  }
-
+@media screen and (min-width: 870px) {
   .leaf-1 {
     top: 0;
     right: 0;
@@ -135,5 +132,13 @@
     left: calc(50% - 150px);
     width: 60px;
     height: 60px;
+  }
+}
+
+/* animation */
+@keyframes header-ani-end {
+  to {
+    opacity: 1;
+    transform: translate(0, 0);
   }
 }
