--- a/CSS/Helper/styles.css
+++ b/CSS/Helper/styles.css
@@ -1,8 +1,3 @@
-/****************************** icons ***************************************/
-.icon-person {
-  background: url("./icon.svg");
-}
-
 /****************************** box sizing **********************************/
 .box-border {
   box-sizing: border-box;
@@ -77,6 +72,10 @@
 
 .flex-grow {
   flex-grow: 1;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
 }
 
 /****************************** position ************************************/
