--- a/CSS/Home/aboutMe.css
+++ b/CSS/Home/aboutMe.css
@@ -1,60 +1,46 @@
-.about-me {
-  overflow: auto;
-  overflow-y: hidden;
+/* section */
+.about-me-section {
+  overflow: hidden;
+  position: relative;
+  padding-bottom: 72px;
+}
+
+/* wrapper */
+.about-me-section .wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
 }
 
 /* title */
-.about-me .title {
-  margin-top: 16px;
-  padding-right: 10px;
-  max-width: 997px;
+.about-me-section .title {
+  position: relative;
+  top: 0;
+  left: 0;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 60px;
+  letter-spacing: -0.01em;
+  color: var(--color-3);
+  user-select: none;
 }
 
-.about-me .title .img {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
-
-/* content */
-.about-me .content {
-  margin-bottom: 56px;
-}
-
-/* person img */
-.about-me .content .img-container {
+/* img */
+.about-me-section .img {
   width: 100%;
   max-width: 280px;
-  max-height: 400px;
-  margin-bottom: 40px;
-}
-
-.about-me .content .img-container .img {
-  width: 100%;
-  object-fit: cover;
-  opacity: 1;
-  transform: translateX(0);
-  transition: transform 300ms ease-in-out, opacity 300ms ease-in-out;
-}
-
-.about-me .content .img-container .img.appear {
-  opacity: 1;
-  transform: translateX(0);
+  box-shadow: 0px 2px 34px 5px #ff2a6a12;
+  border: 8px solid white;
 }
 
 /* text */
-.about-me .text {
-  transform: translateY(0);
-  opacity: 1;
-  transition: transform 300ms ease-in-out, opacity 300ms ease-in-out;
+.about-me-section .text {
+  width: 100%;
+  max-width: 300px;
 }
 
-.about-me .text.appear {
-  transform: translateY(0);
-  opacity: 1;
-}
-
-.about-me .text h1 {
+.about-me-section .text h1 {
   font-style: normal;
   font-weight: 600;
   font-size: 32px;
@@ -63,49 +49,91 @@
   margin-bottom: 16px;
 }
 
-.about-me .text p {
+.about-me-section .text p {
   font-style: normal;
   font-weight: 500;
-  font-size: 1rem;
+  font-size: 16px;
   letter-spacing: -0.01em;
   color: var(--color-6);
   margin-bottom: 32px;
 }
 
-@media screen and (min-width: 630px) {
-  .about-me .content {
-    display: flex;
-    max-width: 650px;
-  }
+/* animation */
 
-  .about-me .img-container {
-    flex: none;
-    margin-right: 16px;
+.about-me-section .img,
+.about-me-section .text {
+  opacity: 0;
+  transition-property: opacity, transform;
+  transition-timing-function: ease;
+  transition-duration: 600ms;
+}
+
+.about-me-section .img {
+  transform: translate(-100px, 0);
+}
+
+.about-me-section .text {
+  transform: translate(100px, 0);
+}
+
+.about-me-section.ani .img,
+.about-me-section.ani .text {
+  opacity: 1;
+  transform: translate(0, 0);
+  transform: translate3d(0, 0);
+}
+
+@media screen and (min-width: 500px) {
+  .about-me-section .title {
+    font-size: 80px;
   }
 }
 
-@media screen and (min-width: 750px) {
-  .about-me .img-container {
-    margin-right: 24px;
+@media screen and (min-width: 650px) {
+  .about-me-section .wrapper {
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+  }
+
+  .about-me-section .title {
+    font-size: 120px;
+    line-height: 120px;
   }
 }
 
 @media screen and (min-width: 845px) {
-  .about-me .content {
-    max-width: 820px !important;
+  .about-me-section .wrapper {
+    gap: 40px;
   }
 
-  .about-me .img-container {
-    max-width: 405px !important;
-    max-height: 586px !important;
-    margin-right: 40px;
+  .about-me-section .img {
+    max-width: 373px;
+    height: 554px;
   }
 
-  .about-me .text h1 {
-    font-size: 3.5rem;
+  .about-me-section .text {
+    max-width: 440px;
   }
 
-  .about-me .text p {
-    font-size: 1.25rem;
+  .about-me-section .text h1 {
+    font-size: 56px;
+  }
+
+  .about-me-section .text p {
+    font-size: 20px;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .about-me-section .title {
+    font-size: 170px;
+    line-height: 170px;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .about-me-section .wrapper {
+    gap: 48px;
   }
 }
