--- a/CSS/Home/blogs.css
+++ b/CSS/Home/blogs.css
@@ -1,27 +1,32 @@
 .blogs-section {
-  padding: 50px 0;
+  padding: 40px 0 70px;
 }
 
 .blogs-section .wrapper {
   max-width: 1300px;
 }
 
-.blogs-section .content h1 {
+.blogs-section h1 {
   font-style: normal;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 32px;
   text-align: center;
   letter-spacing: -0.01em;
-
   color: var(--color-7);
   margin-bottom: 32px;
 }
 
+.blogs-section .blogs-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  column-gap: 24px;
+  row-gap: 64px;
+}
+
 .blog-card {
   width: 100%;
-  margin-bottom: 64px;
-  margin-left: auto;
-  margin-right: auto;
+  max-width: 320px;
 }
 
 .blog-card .img {
@@ -43,6 +48,7 @@
 }
 
 .card-info > p {
+  word-wrap: break;
   margin-top: 4px;
   font-style: normal;
   font-weight: normal;
@@ -51,39 +57,39 @@
   color: var(--gray-6);
 }
 
-@media screen and (min-width: 320px) {
-  .blog-card {
-    max-width: 320px;
-  }
+/* animation */
+.blogs-section .blogs-container {
+  opacity: 0;
+  transform: translate(0, +200px);
+  transition-property: opacity, transform;
+  transition-timing-function: ease;
+  transition-duration: 600ms;
 }
 
-@media screen and (min-width: 750px) {
-  .blogs-container {
-    text-align: center;
-  }
-
-  .blog-card {
-    display: inline-block;
-  }
-
-  .blog-card:nth-child(1),
-  .blog-card:nth-child(2) {
-    margin-right: 20px;
-  }
+.blogs-section.ani .blogs-container {
+  opacity: 1;
+  transform: translate(0, 0);
 }
 
 @media screen and (min-width: 845px) {
-  .blogs-section .content {
+  .blogs-section {
     padding: 80px 0;
   }
-  .blogs-section .content h1 {
+
+  .blogs-section h1 {
     font-size: 56px;
+  }
+}
+
+@media screen and (min-width: 1073px) {
+  .blogs-section {
+    padding: 170px 0;
   }
 }
 
 @media screen and (min-width: 1270px) {
   .blog-card {
-    max-width: 384px !important;
+    max-width: 384px;
   }
 
   .card-info h3 {
@@ -94,22 +100,3 @@
     font-size: 16px;
   }
 }
-/* @media only screen and (max-width: 500px) {
-  .blogs-section {
-    padding: 70px 0;
-  }
-  .all-blogs {
-    margin-left: 0;
-  }
-
-  .blog-card {
-    margin-right: 0 !important;
-    margin-bottom: 40px;
-  }
-}
-
-@media screen and (max-width: 700px) {
-  .blogs-section .container > h1 {
-    font-size: 40px;
-  }
-} */
