--- a/CSS/Home/footer.css
+++ b/CSS/Home/footer.css
@@ -1,36 +1,31 @@
 .footer {
   padding: 80px 0;
-  background: #fa7001;
+  background: var(--color-7);
 }
 
+.footer .wrapper {
+  row-gap: 30px;
+  column-gap: 50px;
+}
+
+/* socials */
 .socials {
   width: 200px;
-  margin-right: 40px;
-  margin-bottom: 24px;
 }
 
 .socials > h4 {
-  margin-bottom: 8px;
   font-style: normal;
   font-weight: bold;
   font-size: 24px;
-  line-height: 36px;
-  margin-bottom: 8px;
-  /* identical to box height */
-
-  /* Grey/white */
-
   color: #ffffff;
+  margin-bottom: 8px;
 }
 
 .socials > h5 {
+  width: 121px;
   font-style: normal;
   font-weight: normal;
   font-size: 12px;
-  line-height: 18px;
-
-  /* Grey/Lighter */
-
   color: #ebedf0;
 }
 
@@ -47,66 +42,78 @@
 }
 
 .facebook {
-  background: url("../../../Assets/facebook.svg");
+  background-image: url("/Assets/facebook.svg");
 }
 
 .twitter {
-  background: url("../../../Assets/twitter.svg");
+  background-image: url("/Assets/twitter.svg");
 }
 
 .instagram {
-  background: url("../../../Assets/instagram.svg");
+  background-image: url("/Assets/instagram.svg");
 }
 
 .pinterest {
-  background: url("../../../Assets/pinterest.svg");
+  background-image: url("/Assets/pinterest.svg");
 }
 
 .linkedin {
-  background: url("../../../Assets/linkedin.svg");
+  background-image: url("/Assets/linkedin.svg");
 }
 
+/* links */
 .footer .links {
   width: 500px;
-}
-
-.links .links-item:not(:last-child) {
-  margin-right: 30px;
-}
-
-.links-item:not(:last-child) {
-  margin-bottom: 24px;
+  row-gap: 20px;
+  column-gap: 30px;
 }
 
 .links-item > h3 {
   font-style: normal;
   font-weight: 600;
   font-size: 20px;
-  line-height: 30px;
   margin-bottom: 16px;
-  /* identical to box height */
-
-  /* Grey/white */
-
   color: #ffffff;
+}
+
+.links-item .flex {
+  row-gap: 8px;
 }
 
 .links-item a {
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
-  line-height: 24px;
-  /* identical to box height */
-
-  /* Grey/white */
-
   color: #ffffff;
 }
 
-.links-item a:not(:last-child) {
-  margin-bottom: 8px;
+/* animations */
+.footer .socials,
+.footer .links-item {
+  opacity: 0;
+  transition-property: opacity, transform;
+  transition-timing-function: ease;
+  transition-duration: 600ms;
 }
 
-.flex-wrap {
-  flex-wrap: wrap;
+.footer .socials {
+  transform: translate(-100px, 0);
+}
+
+.footer .links-item {
+  transform: translate(0, 100px);
+}
+
+.footer .links-item:nth-child(2) {
+  transition-delay: 200ms;
+}
+
+.footer .links-item:nth-child(3) {
+  transition-delay: 400ms;
+}
+
+.footer.ani .socials,
+.footer.ani .links-item {
+  opacity: 1;
+  transform: translate(0, 0);
 }
