--- a/CSS/scroll-snap.css
+++ b/CSS/scroll-snap.css
@@ -2,4 +2,9 @@
   width: 100%;
   height: 100vh;
   overflow-y: scroll;
+  scroll-snap-type: y mandatory;
+}
+
+.snap-div {
+  scroll-snap-align: start;
 }
