made some changes to page 2

--- a/CSS/About/testimonial.css
+++ b/CSS/About/testimonial.css
@@ -3,7 +3,7 @@
   padding: 50px 0;
   position: relative;
   overflow: hidden;
-  background: url("/Assets/Review.png");
+  background-image: url("/Assets/Review.png");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: top left;
