--- a/CSS/About/page-title.css
+++ b/CSS/About/page-title.css
@@ -3,20 +3,12 @@
   width: 100%;
   height: 100%;
   margin-bottom: 64px;
-  background-size: contain !important;
-  background-repeat: no-repeat !important;
-  background-position: bottom left !important;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: bottom left;
 }
 
-.p-0 {
-  padding: 0;
-}
-
-.p-12 {
-  padding: 13px 0;
-}
-
-.page-title h1 {
+.page-title .wrapper h1 {
   padding-top: 30px;
   font-style: normal;
   font-weight: 800;
@@ -26,7 +18,7 @@
 }
 
 .page-title.about {
-  background: url("/Assets/About.png");
+  background-image: url("/Assets/About.png");
   background-color: var(--color-7);
 }
 
@@ -35,7 +27,7 @@
     height: 100px;
   }
 
-  .page-title h1 {
+  .page-title .wrapper h1 {
     font-size: 42px;
   }
 }
@@ -45,7 +37,7 @@
     height: 120px;
     margin-bottom: 75px;
   }
-  .page-title h1 {
+  .page-title .wrapper h1 {
     font-size: 56px;
   }
 }
@@ -56,7 +48,7 @@
     margin-bottom: 100px;
   }
 
-  .page-title h1 {
+  .page-title .wrapper h1 {
     padding-top: 50px;
     font-size: 70px;
   }
