--- a/CSS/Helper/styles.css
+++ b/CSS/Helper/styles.css
@@ -148,7 +148,7 @@
 }
 
 .overflow-hidden {
-  overflow: hidden;
+  overflow: hidden !important;
 }
 
 /****************************** visibility ***********************************/
