--- a/CSS/Home/booking.css
+++ b/CSS/Home/booking.css
@@ -162,22 +162,27 @@
   border-radius: 8px;
 }
 
-.booking .input:hover {
-  border: 2px solid var(--color-7);
-}
-
-.border-orange {
-  border: 2px solid var(--color-7) !important;
-}
-
 .booking .input-field {
   width: 100%;
-  background: none;
+  background-color: transparent !important;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
   line-height: 24px;
   color: #000000;
+}
+
+input:-internal-autofill-selected {
+  background-color: transparent;
+}
+
+.booking .input.focus {
+  border: 2px solid var(--color-7);
+}
+
+.booking .input.focus .icon {
+  filter: invert(48%) sepia(47%) saturate(3429%) hue-rotate(2deg)
+    brightness(100%) contrast(101%);
 }
 
 .mr-10px {
