--- a/CSS/Home/nav.css
+++ b/CSS/Home/nav.css
@@ -1,6 +1,7 @@
 /* nav */
 .nav {
   position: relative;
+  z-index: 10;
 }
 
 /* wrapper */
@@ -61,13 +62,12 @@
 /* nav overlay */
 .nav .overlay {
   display: none;
-  position: fixed;
-  z-index: 2;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
+  height: 100vh;
+  background-color: #00000066;
 }
 
 .nav.open .overlay {
@@ -175,7 +175,15 @@
     display: none;
   }
 
+  .nav.open .overlay {
+    display: none;
+  }
+
   .nav .menu-mob {
+    display: none;
+  }
+
+  .nav.open .menu-mob {
     display: none;
   }
 
