--- a/CSS/Home/intro.css
+++ b/CSS/Home/intro.css
@@ -117,6 +117,12 @@
   }
 }
 
+@media screen and (min-width: 870px) {
+  .intro-section {
+    overflow: visible;
+  }
+}
+
 @media screen and (min-width: 900px) {
   .intro-section .text h1 {
     font-size: 56px;
